(TWILL-105) Remove ZKDecoratorService and some pom file fixes
- The ZKDecoratorSerivce is complicates and is not necessarily and have complicated race condition inside
- Most of the functionalities in ZKDecoratorService are moved into AbstractTwillService
  - It uses AbstractExecutionThreadService from guava that simplifies a lot of service+zk related interactions
  - Remove use of StateNode and updating of Service states in ZK as no one is actually using it
- The Hadoop secure store related code in AbstractTwillService are moved into AbstractYarnTwillService
- Fixes in the pom.xml
  - There should be one Hadoop version profile that is activeByDefault
  - Increase memory size for unit-test
- Fix YARN test cases
  - Increase test timeout for PolicyPlacementTest
  - Correct assertion in ResourceReportTestRun.testResourceReportWithFailingContainers

Signed-off-by: Terence Yim <chtyim@apache.org>